# logit-Mail

./: .gitignore  README.md  docker-compose.yml
backend/: alembic_readme.txt  check_sync_status.py  debug_agent_test.py  debug_blank_subject.py  debug_date_logic.py  debug_db.py  debug_db_standalone.py  debug_full_pipeline.py  debug_last_5.py  debug_latest_state.py  debug_logic_only.py  debug_missed_email.py  fix_stamp_manual.py  force_process.py  pyproject.toml  requirements.txt  reset_failed_emails.py  reset_specific_email.py  retry_pending.py  test_all_cases.py  test_date_resolution.py  test_login.html  test_pdf_simulation.py  test_same_day_exams.py
backend/alembic/: env.py
backend/alembic/versions/: 3149d324aa12_create_users_table.py  37404de35214_add_google_oauth_fields.py  5240e1f7c552_add_body_html_to_email.py  76cfff517d0d_add_priority_category.py  ae2c30622bdb_add_extracted_features_to_email.py  bb89e3ec0cdf_create_emails_table.py  d6a7fa3d30c1_add_last_synced_at_to_user.py
backend/app/: main.py
backend/app/api/: auth.py  calendar.py  emails.py  users.py
backend/app/core/: config.py  database.py  rag.py
backend/app/models/: email.py  user.py
backend/app/schemas/: email.py  user.py
backend/app/services/: agent_service.py  auth_service.py  calendar_service.py  gmail_service.py  rag_service.py  user_service.py
backend/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  Login.jsx  NotificationBanner.jsx
frontend/src/lib/: api.js
(+9 files in other folders)
